tests/typing/bad/testfile-while-3.jl
while true
	x = "43" - 1
end
